dark mode + link fix

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -25,6 +25,7 @@ h1, h2, h3, h4, ol, ul, thead {
 p, ul, text {
   font-family: 'Source Sans Pro', sans-serif;
   color: var(--gray);
+  fill: var(--gray);
 }
 
 pre {
